# NoisyTypingredo

./: .gitignore  CMakeLists.txt  auditeventscsvwriter.cpp  auditeventscsvwriter.h  databasemanager.cpp  databasemanager.h  featureextractor.cpp  featureextractor.h  keystrokeevent.h  mainwindow.cpp  mainwindow.h  profilemodel.cpp  profilemodel.h  promptlibrary.cpp  promptlibrary.h  sessioneventcsvwriter.cpp  sessioneventcsvwriter.h  sessionfeaturecsvwriter.cpp  sessionfeaturecsvwriter.h  sessionfeaturevector.h  sessionsummary.h  thresholdanalysis.cpp  thresholdanalysis.h  thresholdanalysiscsvwriter.cpp  thresholdanalysiscsvwriter.h  typingsession.h  typingtextedit.cpp  typingtextedit.h  verificationresultscsvwriter.cpp  verificationresultscsvwriter.h  verificationstatscsvwriter.cpp  verificationstatscsvwriter.h
tests/: featureextractortest.cpp  profilemodeltest.cpp  thresholdanalysistest.cpp
